--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,11 @@ h3 {
 
 .row1 {
   margin-bottom: 10rem;
+  /* height: 350px; */
 }
+/* .row2{
+  height: 350px;
+} */
 
 .row1 .img-box,
 .row2 .txt-box {
@@ -368,7 +372,7 @@ background: linear-gradient(90deg, rgba(216,114,4,0.9220938375350141) 4%, rgba(2
   color: #f4f4f4;
 }
 
-/* ##################### about page styling ##################### */
+/* ##################### contact page styling ##################### */
 
 .contact-form{
   /* margin: 5rem 0; */
@@ -483,3 +487,93 @@ background: linear-gradient(90deg, rgba(216,114,4,0.9220938375350141) 4%, rgba(2
   text-transform: uppercase;
   border-radius: 100px
 }
+
+
+/* ################## media queries ###################### */
+
+/* ################## header ##################### */
+
+@media (max-width:790px){
+  .row{
+    height: auto;
+    width: 100%;
+  }
+
+  .row .img-box, .row .txt-box{
+    float: none;
+    width: 100%;
+    text-align: center;
+  }
+
+  .box{
+    float: none;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .cta-banner{
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+  }
+
+}
+
+@media(max-width:620px){
+  html{
+    font-size: 50%;
+  }
+
+  .navbar .logo, .navbar .nav-items{
+    float: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+
+  .row{
+    height: auto;
+    width: 100%;
+  }
+
+  .row .img-box, .row .txt-box{
+    float: none;
+    width: 100%;
+    text-align: center;
+  }
+
+  .box{
+    float: none;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+
+}
+
+@media(max-width:500px){
+  .cta-banner .cta-btn{
+    font-size: 2rem;
+    border: 3px solid white;
+    padding: 0.1em 1.2em;
+  }
+}
+
+@media(max-width:1250px){
+  .form-wrapper .company-address, .form-wrapper .form{
+    float: none;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+/* 
+  .form input{
+    margin: 1.5rem 0;
+    height: 4rem;
+  } */
+}
+
+
+/* ############### showcase #################### */
+
+
